--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.da66cf16.js" as="script"><link rel="preload" href="/assets/js/7.f4adb7c6.js" as="script"><link rel="prefetch" href="/assets/js/10.d3e067c0.js"><link rel="prefetch" href="/assets/js/11.46791625.js"><link rel="prefetch" href="/assets/js/12.9bb91655.js"><link rel="prefetch" href="/assets/js/13.758fa7ac.js"><link rel="prefetch" href="/assets/js/14.f1e6055d.js"><link rel="prefetch" href="/assets/js/15.c9dca701.js"><link rel="prefetch" href="/assets/js/16.314476ba.js"><link rel="prefetch" href="/assets/js/17.3ec9da5a.js"><link rel="prefetch" href="/assets/js/2.72be0d30.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.d115c451.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/8.35fa6deb.js"><link rel="prefetch" href="/assets/js/9.b71b661d.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.5cf52ea8.js" as="script"><link rel="preload" href="/assets/js/7.f4adb7c6.js" as="script"><link rel="prefetch" href="/assets/js/10.d3e067c0.js"><link rel="prefetch" href="/assets/js/11.46791625.js"><link rel="prefetch" href="/assets/js/12.9bb91655.js"><link rel="prefetch" href="/assets/js/13.4177fa69.js"><link rel="prefetch" href="/assets/js/14.df91619d.js"><link rel="prefetch" href="/assets/js/15.9a46f803.js"><link rel="prefetch" href="/assets/js/16.b476346a.js"><link rel="prefetch" href="/assets/js/17.346c00f8.js"><link rel="prefetch" href="/assets/js/18.9763cb1e.js"><link rel="prefetch" href="/assets/js/2.72be0d30.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.eb2e0236.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/8.a05ff484.js"><link rel="prefetch" href="/assets/js/9.b71b661d.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.da66cf16.js" defer></script><script src="/assets/js/7.f4adb7c6.js" defer></script>
+    <script src="/assets/js/app.5cf52ea8.js" defer></script><script src="/assets/js/7.f4adb7c6.js" defer></script>
   </body>
 </html>
