--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.5cf52ea8.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.d3e067c0.js"><link rel="prefetch" href="/assets/js/11.46791625.js"><link rel="prefetch" href="/assets/js/12.9bb91655.js"><link rel="prefetch" href="/assets/js/13.4177fa69.js"><link rel="prefetch" href="/assets/js/14.df91619d.js"><link rel="prefetch" href="/assets/js/15.9a46f803.js"><link rel="prefetch" href="/assets/js/16.b476346a.js"><link rel="prefetch" href="/assets/js/17.346c00f8.js"><link rel="prefetch" href="/assets/js/18.9763cb1e.js"><link rel="prefetch" href="/assets/js/4.eb2e0236.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.a05ff484.js"><link rel="prefetch" href="/assets/js/9.b71b661d.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.bb732a7c.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.d3e067c0.js"><link rel="prefetch" href="/assets/js/11.46791625.js"><link rel="prefetch" href="/assets/js/12.64d06336.js"><link rel="prefetch" href="/assets/js/13.d4e486ba.js"><link rel="prefetch" href="/assets/js/14.b355be85.js"><link rel="prefetch" href="/assets/js/15.bf0dc378.js"><link rel="prefetch" href="/assets/js/16.73370cb3.js"><link rel="prefetch" href="/assets/js/17.96e9f418.js"><link rel="prefetch" href="/assets/js/18.7274ed7f.js"><link rel="prefetch" href="/assets/js/19.2c4dc3e0.js"><link rel="prefetch" href="/assets/js/4.4d7fa891.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.cd21f21e.js"><link rel="prefetch" href="/assets/js/9.b71b661d.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -39,6 +39,6 @@
               </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
                 熟悉node.js，并可以运用接口服务 
               </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.5cf52ea8.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
+    <script src="/assets/js/app.bb732a7c.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
   </body>
 </html>
