--- a/page1/webpack.html
+++ b/page1/webpack.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.674b8dff.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/21.dc2cc87d.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.ca7686bf.js"><link rel="prefetch" href="/assets/js/13.14e02ab4.js"><link rel="prefetch" href="/assets/js/14.31c479ee.js"><link rel="prefetch" href="/assets/js/15.278b9f3b.js"><link rel="prefetch" href="/assets/js/16.d5fa1f7d.js"><link rel="prefetch" href="/assets/js/17.246c199c.js"><link rel="prefetch" href="/assets/js/18.85b5ec9d.js"><link rel="prefetch" href="/assets/js/19.6e667358.js"><link rel="prefetch" href="/assets/js/20.6c991996.js"><link rel="prefetch" href="/assets/js/22.acfa8e9f.js"><link rel="prefetch" href="/assets/js/23.78cdd772.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.c42d3a20.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.231cd33f.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.f656ae62.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/22.ab8cec55.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.ca7686bf.js"><link rel="prefetch" href="/assets/js/13.14e02ab4.js"><link rel="prefetch" href="/assets/js/14.31c479ee.js"><link rel="prefetch" href="/assets/js/15.278b9f3b.js"><link rel="prefetch" href="/assets/js/16.d5fa1f7d.js"><link rel="prefetch" href="/assets/js/17.246c199c.js"><link rel="prefetch" href="/assets/js/18.85b5ec9d.js"><link rel="prefetch" href="/assets/js/19.6e667358.js"><link rel="prefetch" href="/assets/js/20.6c991996.js"><link rel="prefetch" href="/assets/js/21.53bfc044.js"><link rel="prefetch" href="/assets/js/23.eadace12.js"><link rel="prefetch" href="/assets/js/24.0edd5c57.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.19d42a3c.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.8ca47a83.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -57,7 +57,7 @@ module.exports = {
 
 // 输出
 console.log(envConfig) // {api: &quot;www.baidu.com&quot;}
-</code></pre></div></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/28 9:14:10 周五</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
+</code></pre></div></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/29 9:11:56 周六</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
       ←
       <a href="/page1/build.html" class="prev">
         多环境打包配置
@@ -66,6 +66,6 @@ console.log(envConfig) // {api: &quot;www.baidu.com&quot;}
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.674b8dff.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/21.dc2cc87d.js" defer></script>
+    <script src="/assets/js/app.f656ae62.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/22.ab8cec55.js" defer></script>
   </body>
 </html>
