--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.00f25459.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/15.9685f86b.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.01e9dd73.js"><link rel="prefetch" href="/assets/js/22.883efcae.js"><link rel="prefetch" href="/assets/js/23.888ee3c7.js"><link rel="prefetch" href="/assets/js/24.a4bbc081.js"><link rel="prefetch" href="/assets/js/25.d38d31d4.js"><link rel="prefetch" href="/assets/js/26.0bb3c407.js"><link rel="prefetch" href="/assets/js/4.47202ac2.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d6f64f62.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.912ca3af.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/15.9685f86b.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.01e9dd73.js"><link rel="prefetch" href="/assets/js/22.883efcae.js"><link rel="prefetch" href="/assets/js/23.888ee3c7.js"><link rel="prefetch" href="/assets/js/24.a4bbc081.js"><link rel="prefetch" href="/assets/js/25.863dddd5.js"><link rel="prefetch" href="/assets/js/26.24628e67.js"><link rel="prefetch" href="/assets/js/27.658c5e60.js"><link rel="prefetch" href="/assets/js/4.01e67710.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d6f64f62.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -16,13 +16,17 @@
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
   项目积累
-</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
+  每日一题
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
   vue
 </a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
   项目积累
-</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
+  每日一题
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
   vue
 </a></li></ul></div></div> <!----></nav>  <!----> </aside> <main class="home"><header class="hero"><!----> <!----> <!----> <!----></header> <!----> <div class="theme-default-content custom content__default"><div class="star"><div class="background"><canvas id="startrack"></canvas> <div style="height:700px;background:#212121;"></div> <div class="cover"></div></div> <div class="main"><div class="intro"><div class="container"><div class="hello"><h1 class="slogan">你看那个人，Ta好像一条狗啊...</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
                 AOMR
@@ -39,6 +43,6 @@
               </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
                 熟悉node.js，并可以运用接口服务 
               </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.00f25459.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
+    <script src="/assets/js/app.912ca3af.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
   </body>
 </html>
