--- a/page1/function.html
+++ b/page1/function.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.912ca3af.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/15.9685f86b.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.01e9dd73.js"><link rel="prefetch" href="/assets/js/22.883efcae.js"><link rel="prefetch" href="/assets/js/23.888ee3c7.js"><link rel="prefetch" href="/assets/js/24.a4bbc081.js"><link rel="prefetch" href="/assets/js/25.863dddd5.js"><link rel="prefetch" href="/assets/js/26.24628e67.js"><link rel="prefetch" href="/assets/js/27.658c5e60.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.01e67710.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d6f64f62.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.1684a2d6.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/15.9685f86b.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.01e9dd73.js"><link rel="prefetch" href="/assets/js/22.883efcae.js"><link rel="prefetch" href="/assets/js/23.888ee3c7.js"><link rel="prefetch" href="/assets/js/24.a4bbc081.js"><link rel="prefetch" href="/assets/js/25.863dddd5.js"><link rel="prefetch" href="/assets/js/26.1ab0585d.js"><link rel="prefetch" href="/assets/js/27.563a58a9.js"><link rel="prefetch" href="/assets/js/28.77603942.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.34c5117e.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d6f64f62.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -72,7 +72,7 @@ on:{&quot;click&quot;:click1}},
 [_v(&quot;click1&quot;)]),_v(&quot; &quot;),
 _c('div',{attrs:{&quot;id&quot;:&quot;test2&quot;},
 on:{&quot;click&quot;:function($event){$event.stopPropagation();click2($event)}}}
-</code></pre></div></li> <li>虚拟dom --- &gt; 真实dom的时候。会调用核心函数 add$1() 通过addEventListener绑定相应事件</li></ol></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/31 9:33:30 周一</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
+</code></pre></div></li> <li>虚拟dom --- &gt; 真实dom的时候。会调用核心函数 add$1() 通过addEventListener绑定相应事件</li></ol></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/6/1 17:17:19 周二</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
       ←
       <a href="/page1/array.html" class="prev">
         数组取交集、并集与补集
@@ -81,6 +81,6 @@ on:{&quot;click&quot;:function($event){$event.stopPropagation();click2($event)}}
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.912ca3af.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/15.9685f86b.js" defer></script>
+    <script src="/assets/js/app.1684a2d6.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/15.9685f86b.js" defer></script>
   </body>
 </html>
